--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,8 +14,15 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
+    "noImplicitAny": false,
+    "strictPropertyInitialization": false,
     "paths": {
-      "@foreign-contacts/api-interfaces": ["libs/api-interfaces/src/index.ts"]
+      "@foreign-contacts/api-interfaces": ["libs/api-interfaces/src/index.ts"],
+      "@foreign-contacts/core-data": ["libs/core-data/src/index.ts"],
+      "@foreign-contacts/core-state": ["libs/core-state/src/index.ts"],
+      "@foreign-contacts/material": ["libs/material/src/index.ts"],
+      "@foreign-contacts/theme": ["libs/theme/src/index.ts"],
+      "@foreign-contacts/ui-login": ["libs/ui-login/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
